Commented out and removed some unnecessary code.

--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,7 @@
 <body>
 <!--TODO: ADD STYLING   <span class="material-symbols-outlined" id="settings"><a href="settings.html">settings</a></span> -->
   <div id="messages">
-     <p id="message-start">></p><div contenteditable id="message" autofocus></div>
+     <p id="message-start">></p><span contenteditable id="message" autofocus></span>
   </div> <!--add p elements, any keys typed are added to a new line in the console, done with keypress. -->
   <script src="/socket.io/socket.io.js"></script>
   <script type="module" src="script.js"></script>
