--- a/client/index.html
+++ b/client/index.html
@@ -18,6 +18,14 @@
   <div id="messages">
      <p id="message-start">></p><span contenteditable id="message" autofocus></span>
   </div> <!--add p elements, any keys typed are added to a new line in the console, done with keypress. -->
+  <div class="navbar" id="navbar">
+    <a href="#room1">Room 1</a>
+    <a href="#room2">Room 2</a>
+    <a href="#room3">Room 3</a>
+    <a href="#room4">Room 4</a>
+    <a href="#room5">Room 5</a>
+    <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+  </div>
   <script src="/socket.io/socket.io.js"></script>
   <script type="module" src="script.js"></script>
 </body>
