Fixed keyboard on mobile.

--- a/client/index.html
+++ b/client/index.html
@@ -24,8 +24,8 @@
     <a class="room-element"        data-to="3" id="room3" href="#room3">Room 3</a>
     <a class="room-element"        data-to="4" id="room4" href="#room4">Room 4</a>
     <a class="room-element"        data-to="5" id="room5" href="#room5">Room 5</a>
-    <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
   </div>
+  <pre id="debug-mobile"></pre>
   <script src="/socket.io/socket.io.js"></script>
   <script type="module" src="script.js"></script>
 </body>
