--- a/client/index.html
+++ b/client/index.html
@@ -25,7 +25,7 @@
     <a class="room-element"        data-to="4" id="room4" href="#room4">Room 4</a>
     <a class="room-element"        data-to="5" id="room5" href="#room5">Room 5</a>
   </div>
-  <pre id="debug-mobile"></pre>
+  <!-- <pre id="debug-mobile"></pre> -->
   <script src="/socket.io/socket.io.js"></script>
   <script type="module" src="script.js"></script>
 </body>
