--- a/client/index.html
+++ b/client/index.html
@@ -15,17 +15,18 @@
 
 <body>
 	<!--TODO: ADD STYLING   <span class="material-symbols-outlined" id="settings"><a href="settings.html">settings</a></span> -->
+	<div class="navbar" id="navbar">
+		<a class="room-element active" data-to="1" id="room1" href="#room1">Room 1</a>
+		<a class="room-element"        data-to="2" id="room2" href="#room2">Room 2</a>
+		<a class="room-element"        data-to="3" id="room3" href="#room3">Room 3</a>
+		<a class="room-element"        data-to="4" id="room4" href="#room4">Room 4</a>
+		<a class="room-element"        data-to="5" id="room5" href="#room5">Room 5</a>
+  	</div>
 	<div id="messages">
 		<p id="message-start">></p><span contenteditable id="message" autofocus autocapitalize="off" autocomplete="off" autocorrect="off"></span>
 	</div>
 	<!--add p elements, any keys typed are added to a new line in the console, done with keypress. -->
-	<!-- <div class="navbar" id="navbar">
-    <a class="room-element active" data-to="1" id="room1" href="#room1">Room 1</a>
-    <a class="room-element"        data-to="2" id="room2" href="#room2">Room 2</a>
-    <a class="room-element"        data-to="3" id="room3" href="#room3">Room 3</a>
-    <a class="room-element"        data-to="4" id="room4" href="#room4">Room 4</a>
-    <a class="room-element"        data-to="5" id="room5" href="#room5">Room 5</a>
-  	</div> -->
+
 	<!-- <pre id="debug-mobile"></pre> -->
 	<!-- <nav>
 	<ul>
@@ -47,13 +48,13 @@
 	</ul>
 	</nav> -->
 	
-	
-	<div class="sidebar">
+
+	<!-- <div class="sidebar">
 		<a class="active" href="#home">Home</a>
 		<a href="#news">News</a>
 		<a href="#contact">Contact</a>
 		<a href="#about">About</a>
-	</div>
+	</div> -->
 
 	<script src="/socket.io/socket.io.js"></script>
 	<script type="module" src="script.js"></script>
