--- a/client/index.html
+++ b/client/index.html
@@ -2,62 +2,34 @@
 <html>
 
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width">
-	<title>chat - coral</title>
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
-	<link href="style.css" rel="stylesheet" type="text/css"/>
-	<script type="module" src="libraries/cookies-js/js.cookie.js"></script>
-	<script nomodule defer src="libraries/cookies-js/js.cookie.js"></script>
-	<!--   <script src="//socket.io/socket.io.js"></script> -->
-	<!--   <meta http-equiv="Refresh" content="0; url=settings.html"> -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>chat - coral</title>
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <link href="style.css" rel="stylesheet" type="text/css" />
+  <script type="module" src="libraries/cookies-js/js.cookie.js"></script>
+  <script nomodule defer src="libraries/cookies-js/js.cookie.js"></script>
+  <!--   <script src="//socket.io/socket.io.js"></script> -->
+  <!--   <meta http-equiv="Refresh" content="0; url=settings.html"> -->
 </head>
 
 <body>
-	<!--TODO: ADD STYLING   <span class="material-symbols-outlined" id="settings"><a href="settings.html">settings</a></span> -->
-	<div class="navbar" id="navbar">
-		<a class="room-element active" data-to="1" id="room1" href="#room1">Room 1</a>
-		<a class="room-element"        data-to="2" id="room2" href="#room2">Room 2</a>
-		<a class="room-element"        data-to="3" id="room3" href="#room3">Room 3</a>
-		<a class="room-element"        data-to="4" id="room4" href="#room4">Room 4</a>
-		<a class="room-element"        data-to="5" id="room5" href="#room5">Room 5</a>
-  	</div>
-	<div id="messages">
-		<p id="message-start">></p><span contenteditable id="message" autofocus autocapitalize="off" autocomplete="off" autocorrect="off"></span>
-	</div>
-	<!--add p elements, any keys typed are added to a new line in the console, done with keypress. -->
-
-	<!-- <pre id="debug-mobile"></pre> -->
-	<!-- <nav>
-	<ul>
-		<li>
-			<a href="#"><i class="fa fa-home"></i>home</a>
-		</li>
-		<li>
-			<a href="#"><i class="fa fa-book"></i>bout</a>
-		</li>
-		<li>
-			<a href="#"><i class="fa fa-users"></i>eam</a>
-		</li>
-		<li>
-			<a href="#"><i class="fa fa-picture-o"></i>portfolio</a>
-		</li>
-		<li>
-			<a href="#"><i class="fa fa-phone"></i>contact</a>
-		</li>
-	</ul>
-	</nav> -->
-	
-
-	<!-- <div class="sidebar">
-		<a class="active" href="#home">Home</a>
-		<a href="#news">News</a>
-		<a href="#contact">Contact</a>
-		<a href="#about">About</a>
-	</div> -->
-
-	<script src="/socket.io/socket.io.js"></script>
-	<script type="module" src="script.js"></script>
+  <!--TODO: ADD STYLING   <span class="material-symbols-outlined" id="settings"><a href="settings.html">settings</a></span> -->
+  <div class="navbar" id="navbar">
+    <a class="room-element active" data-to="1" id="room1" href="#room1">Room 1</a>
+    <a class="room-element" data-to="2" id="room2" href="#room2">Room 2</a>
+    <a class="room-element" data-to="3" id="room3" href="#room3">Room 3</a>
+    <a class="room-element" data-to="4" id="room4" href="#room4">Room 4</a>
+    <a class="room-element" data-to="5" id="room5" href="#room5">Room 5</a>
+  </div>
+  <div id="messages">
+    <p id="message-start">></p><span contenteditable id="message" autofocus autocapitalize="off" autocomplete="off"
+      autocorrect="off"></span>
+  </div>
+  <!-- <pre id="debug-mobile"></pre> -->
+  <script src="/socket.io/socket.io.js"></script>
+  <script type="module" src="script.js"></script>
 </body>
 
 </html>
