3/4s done with account process.

--- a/client/index.html
+++ b/client/index.html
@@ -42,7 +42,7 @@
       <br/>
       <span id="email-box" class="hidden"><label for="password" class="settings-label">Email:</label><input type="email" class="settings-input" name="password" id="email"></input></span>
       <br/>
-      <p class="settings-label settings-validator hidden" id="validator"> gtew g ew</p>
+      <p class="settings-label settings-validator hidden" id="validator"></p>
     </div>
     <button class="button-3" role="button" id="settings-confirm">Submit</button>
 <!--     <div id="signUp"> -->
